--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
 	"devDependencies": {
-		"lerna": "^2.11.0"
+		"codecov": "^3.0.2",
+		"lerna": "^2.11.0",
+		"nyc": "^11.7.3"
 	},
 	"scripts": {
 		"test": "lerna run test"
