--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
 	"devDependencies": {
-		"codecov": "^3.0.2",
-		"lerna": "^2.11.0",
-		"nyc": "^11.7.3"
+		"sinon": "^5.0.7",
+		"ava": "^0.20.0",
+		"codecov": "^2.2.0",
+		"nyc": "^11.0.0"
 	},
 	"scripts": {
-		"test": "lerna run test"
+		"test": "nyc ava packages/*/src/*-spec.js"
 	}
 }
