--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 		"sinon": "^5.0.7",
 		"ava": "^0.20.0",
 		"codecov": "^2.2.0",
-		"nyc": "^11.0.0"
+		"nyc": "^11.0.0",
+		"lerna": "^2.11.0"
 	},
 	"scripts": {
 		"test": "nyc ava packages/*/src/*-spec.js"
