Add renderer, minor fixes

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"lerna": "^2.11.0"
 	},
 	"scripts": {
-		"test": "nyc ava packages/*/src/*-spec.js"
+		"test": "nyc ava packages/*/src/*-spec.js",
+		"test:dev": "ava packages/*/src/*-spec.js -w"
 	}
 }
