--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@node-menu/core",
+  "name": "@node-menu/renderer",
   "version": "1.0.2",
-  "description": "Menu components for Node",
+  "description": "Rendering services for node-menu",
   "main": "index.js",
   "scripts": {
     "test": "nyc ava src/*-spec.js"
@@ -9,12 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@node-menu/core": "^1.0.1"
   },
   "devDependencies": {
-    "sinon": "^5.0.7",
     "ava": "^0.20.0",
     "codecov": "^2.2.0",
-    "nyc": "^11.0.0"
+    "nyc": "^11.0.0",
+    "sinon": "^5.0.7"
   },
   "nyc": {
     "reporter": [
