--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@node-menu/core",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Menu components for Node",
   "main": "index.js",
   "scripts": {
@@ -8,13 +8,11 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-  },
   "devDependencies": {
-    "sinon": "^5.0.7",
     "ava": "^0.20.0",
     "codecov": "^2.2.0",
-    "nyc": "^11.0.0"
+    "nyc": "^11.0.0",
+    "sinon": "^5.0.7"
   },
   "nyc": {
     "reporter": [
